@@ -3,22 +3,22 @@ package com.c203.altteulbe.game.service;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
+import com.c203.altteulbe.common.dto.BattleType;
 import com.c203.altteulbe.common.response.PageResponse;
 import com.c203.altteulbe.common.utils.PaginateUtil;
 import com.c203.altteulbe.game.persistent.entity.Game;
 import com.c203.altteulbe.game.persistent.repository.game.GameRepository;
-import com.c203.altteulbe.game.web.dto.response.GameRecordResponseDto;
-import com.c203.altteulbe.game.web.dto.response.ItemInfo;
-import com.c203.altteulbe.game.web.dto.response.ProblemInfo;
-import com.c203.altteulbe.game.web.dto.response.TeamInfo;
+import com.c203.altteulbe.game.service.exception.GameNotParticipatedException;
+import com.c203.altteulbe.game.web.dto.record.response.GameRecordResponseDto;
+import com.c203.altteulbe.game.web.dto.record.response.ItemInfo;
+import com.c203.altteulbe.game.web.dto.record.response.ProblemInfo;
+import com.c203.altteulbe.game.web.dto.record.response.TeamInfo;
 import com.c203.altteulbe.user.persistent.repository.UserJPARepository;
 import com.c203.altteulbe.user.service.exception.NotFoundUserException;
 
@@ -27,6 +27,7 @@ import lombok.extern.slf4j.Slf4j;
 
 @Slf4j
 @Service
+@Transactional
 @RequiredArgsConstructor
 public class GameHistoryService {
 
@@ -36,13 +37,17 @@ public class GameHistoryService {
 		if (!userJPARepository.existsById(userId)) {
 			throw new NotFoundUserException();
 		}
-		Page<Game> games = gameRepository.findWithItemAndProblemAndAllMemberByUserId(userId,
-			PageRequest.of(pageable.getPageNumber(),
-				pageable.getPageSize())
-		);
+		List<Game> games = gameRepository.findWithItemAndProblemAndAllMemberByUserId(userId);
+
+		List<Game> pagedGames = games.stream()
+			.sorted(Comparator.comparing(Game::getCreatedAt).reversed()) // 최신순 정렬
+			.skip(pageable.getOffset()) // Offset 만큼 건너뛰기
+			.limit(pageable.getPageSize()) // 한 페이지에 필요한 개수만큼 가져오기
+			.toList();
+
 
 		List<GameRecordResponseDto> gameRecordResponseDtos = new ArrayList<>();
- 		for (Game game: games) {
+ 		for (Game game: pagedGames) {
 			ProblemInfo problemInfo = ProblemInfo.builder()
 				.problemId(game.getProblem().getId())
 				.problemContent(game.getProblem().getDescription())
@@ -51,25 +56,22 @@ public class GameHistoryService {
 
 			List<TeamInfo> teamInfos = extractTeamInfos(game);
 
-			List<TeamInfo> opponents = new ArrayList<>();
-
 			TeamInfo myTeam = teamInfos.stream()
 				.filter(teamInfo -> teamInfo.getMembers().stream()
 					.anyMatch(member -> member.getUserId().equals(userId))) // `anyMatch()`로 검사
 				.findFirst()
-				.orElse(null);
+				.orElseThrow(GameNotParticipatedException::new);
 
-			opponents.add(
-				teamInfos.stream()
+			// 모든 해당 팀을 리스트로 변환 후 추가
+			List<TeamInfo> opponents = new ArrayList<>(teamInfos.stream()
 				.filter(teamInfo -> teamInfo.getMembers().stream()
-					.anyMatch(member -> !member.getUserId().equals(userId))) // `anyMatch()`로 검사
-				.findFirst()
-				.orElse(null)
-			);
+					.noneMatch(member -> member.getUserId().equals(userId))) // 조건 만족하는 모든 팀 필터링
+				.toList());
+
+
 			List<ItemInfo> items;
 			if (myTeam != null) items = ItemInfo.from(game, myTeam.getTeamId());
 			else throw new NullPointerException();
-
 			gameRecordResponseDtos.add(GameRecordResponseDto.from(game, problemInfo, items, myTeam, opponents));
 		}
 
@@ -79,19 +81,16 @@ public class GameHistoryService {
 	}
 
 	private static List<TeamInfo> extractTeamInfos(Game game) {
-		// 팀방 정보 변환
-		List<TeamInfo> teamRoomInfos = game.getTeamRooms().stream()
-			.map(TeamInfo::fromTeamRoom)
-			.toList();
-
-		// 개인방 정보 변환 (TeamInfo 형식으로 변환)
-		List<TeamInfo> singleRoomInfos = game.getSingleRooms().stream()
-			.map(TeamInfo::fromSingleRoom)
-			.toList();
-
-		// 두 리스트 합치기 + createdAt 기준 정렬
-		return Stream.concat(teamRoomInfos.stream(), singleRoomInfos.stream())
-			.sorted(Comparator.comparing(TeamInfo::getCreatedAt))
-			.collect(Collectors.toList());
+		if (game.getBattleType() == BattleType.S) {
+			// 개인방 정보 변환 (TeamInfo 형식으로 변환)
+			return game.getSingleRooms().stream()
+				.map(TeamInfo::fromSingleRoom)
+				.toList();
+		} else {
+			// 팀방 정보 변환
+			return game.getTeamRooms().stream()
+				.map(TeamInfo::fromTeamRoom)
+				.toList();
+		}
 	}
 }
